# ml-evaluation-workbench

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
examples/: download_penguins.py  run_demo.py
results/: README.md  checksums.sha256  cross_validation_folds.csv  feature_ablation_folds.csv  feature_ablation_summary.csv  leakage_diagnostic_folds.csv  leakage_diagnostics.json  metrics.json  model_comparison.csv  predictions.csv
src/ml_evaluation_workbench/: __init__.py  cli.py  dataset.py  evaluation.py  reporting.py
tests/: conftest.py  test_cli.py  test_dataset.py  test_evaluation.py  test_reproducibility.py
