[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-evaluation-workbench"
version = "0.3.0"
description = "Reproducible machine-learning baselines and evaluation artifacts"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "cab0a" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "matplotlib>=3.9",
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.5",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Repository = "https://github.com/cab0a/ml-evaluation-workbench"
Issues = "https://github.com/cab0a/ml-evaluation-workbench/issues"

[project.scripts]
ml-evaluation-workbench = "ml_evaluation_workbench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
